--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <div class="side one"></div>
   <div class="side two">
     <h2>Dear Boo,</h2>
-    <p>On this Valentine's Day, I want to remind u how brilliant and valuable u are. Although we go through dark times, ur light, like that of the sun, cannot be eclipsed by temporary clouds. U are an intelligent and talented person, like a rising star who has illuminated ur own path.</p>
-    <p>Even when the path may seem blurry during challenging moments, trust that each step brings u closer to a new dawn. Darkness won't last forever. Remember that, just like songs, each note in ur life forms a unique melody. The pauses and changes in rhythm are essential parts of the composition, revealing ur strength and resilience at the end of the symphony.</p>
-    <p>On this special day, I hope u find solace in ur own inner light. May this letter serve as a reminder that, like the sun, u will always shine with all ur splendor.</p>
+    <p>On this Valentine's Day, I want to remind u how precious u are. Although we go through dark times, ur light, like the sun, cannot be eclipsed. <br />U are smart and talented, like a rising star.</p>
+    <p>Though the path may seem blurry in difficult times, each step brings u closer to a new dawn. The darkness will not last 4ever. Remember that, like the songs, each note of ur life forms a unique melody.</p>
+    <p>On this special day, may u find comfort in ur own inner light. May this letter be a reminder that, like the sun, u will always shine brightly.</p>
     <h3>W/ love P.</h3>
   </div>
 </div>
